--- a/app/views/list/choose.html.erb
+++ b/app/views/list/choose.html.erb
@@ -1,7 +1,7 @@
 <h1>Which list would you like to add a talk to?</h1>
 
 <div class="column">
-<p class="createwarn">Please add an existing talk to talks.cam <b><i>only</i></b> if you are the <b><i>actual organiser</i></b> of the talk or series, or have first <i>asked their permission</i>.</p>
+<p class="createwarn">Please add an existing talk to <%=SITE_NAME %> <b><i>only</i></b> if you are the <b><i>actual organiser</i></b> of the talk or series, or have first <i>asked their permission</i>.</p>
 
 <p>Each talk can be part of many lists, but it needs one as its main 'home'.  This is usually a list that represents its series.</p>
 <ul id='lists'>
