--- a/app/views/list/_add_talk_list.html.erb
+++ b/app/views/list/_add_talk_list.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to add_talk_list.name, talk_url(:action => 'edit', :list_id => add_talk_list.id ) %></li>
+<li><%= link_to add_talk_list.name, talk_url(:action => 'new', :list_id => add_talk_list.id ) %></li>
