--- a/app/views/show/_simple_talk.html.erb
+++ b/app/views/show/_simple_talk.html.erb
@@ -5,13 +5,13 @@
 	<% unless simple_talk.series == @list %>
 		<p class='series'><%= link_list(simple_talk.series)%></p>
 	<% end %>
-	<p><%= image_tag 'clock.jpg' %><%= format_time_of_talk simple_talk %></p>
 <h2 class='summary'><%= link_talk simple_talk %></h2>
 	<p class='details'><%= simple_talk.name_of_speaker %>.</p> 
 	<p class='abstract'><%= truncate(simple_talk.abstract, :length => (simple_talk.language=='ja' ? 200 : 400)) %> <%= link_to('[more]', talk_url(:id => simple_talk), :class => 'click link') %></p>
-	<p><%= image_tag 'house.jpg' %><%= link_list simple_talk.venue %>.
-	<% if simple_talk.language %>
-	Language: <%= simple_talk.language_name %>
+	<p class='time-venue-lang'><%= link_to_date(simple_talk) %>
+	| <%= link_list simple_talk.venue %>
+	  <% if simple_talk.language && !simple_talk.language.empty? %> | 
+	  <%= t :language %>: <%= t simple_talk.language %>
 	<% end %></p>
 	<!--<p class='location'><%= image_tag 'house.jpg' %><%= link_list simple_talk.venue %>.</p>-->
 </div>
