--- a/app/views/search/_search.html.erb
+++ b/app/views/search/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag( {:action => 'results'}, {:class => 'search' }) %>
-	<p class='examples'>e.g. Surfaces and strings, Darwin lectures, Thomas Young, meerkat, Lord Adonis</p>
+	<p class='examples'><%= SEARCH_EXAMPLES %></p>
 	<%= text_field_tag 'search', search, :size => '40' %><%= submit_tag 'Search' %>
 	<p class='settings'><%= link_to 'Browse the A-Z index', index_url %></p>
 </form>
