--- a/app/views/shared/_small_search_box.html.erb
+++ b/app/views/shared/_small_search_box.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag( { :controller => 'search', :action => 'results' }, {:id => 'smallsearch' } ) %>
-	<%= text_field_tag 'search', '', :size => 10 %>&nbsp;<%= submit_tag 'Go' %>
+	<%= text_field_tag 'search', '', :size => 10 %>&nbsp;<%= submit_tag 'Go' %><br/>
 	<%= link_to 'Browse A-Z', index_url %>
 </form>
