--- a/app/views/login/logout.html.erb
+++ b/app/views/login/logout.html.erb
@@ -1,3 +1,3 @@
 <h1>You have been logged out</h1>
 
-<p>If you used <b>raven</b> to log in, then you must quit your browser to be 100% confident that no-one else can use your log in.</p>
+<p>Thank you for using <%=SITE_NAME %>.</p>
