--- a/app/views/mailer/list_tickle.text.erb
+++ b/app/views/mailer/list_tickle.text.erb
@@ -9,10 +9,10 @@ Details: <%= @list.details %>
 You can find out more at:
 <%= @list_url %>
 
-Or, if you have a talks.cam account, you can add this list to your list:
+Or, if you have a <%=SITE_NAME%> account, you can add this list to your list:
 <%= @add_to_list_url %>
 
-If you don't have a talks.cam account, you can get one here:
+If you don't have a <%=SITE_NAME%> account, you can get one here:
 <%= new_user_url %>
 
 If the technology works, clicking on the link below might cause your calendar program to subscribe to this list of talks:
