--- a/app/views/login/new_user.html.erb
+++ b/app/views/login/new_user.html.erb
@@ -1,8 +1,8 @@
-<h1>Welcome to talks.cam</h1>
+<h1>Welcome to <%=SITE_NAME%></h1>
 
 <%= form_tag :action => 'do_new_user' do %>
 
-<p>I believe this is the first time you have logged into talks.cam.</p>
+<p>I believe this is the first time you have logged into <%=SITE_NAME%>.</p>
 
 <% unless @user.name && !@user.name.empty? && @user.affiliation && !@user.affiliation.empty? %>
 	<p>I would appreciate a few further details:</p>
@@ -20,6 +20,6 @@
 
 <p>If you use Apple iCal, Mozilla Sunbird and Ximian Evolution, or have the Remote Calendars plug-in for Microsoft Outlook, then you can have talks in your list automatically listed in your calendar by using <%= link_to "this link", :controller => 'show', :action => 'ics', :id => @user.lists.first, :only_path => false, :protocol => 'webcal://'   %>.</p>
 
-<%= submit_tag 'Update your details and continue onto talks.cam'%>
+<%= submit_tag "Update your details and continue onto #{SITE_NAME}" %>
 
 <% end %>
