--- a/app/views/mailer/talk_tickle.text.erb
+++ b/app/views/mailer/talk_tickle.text.erb
@@ -10,10 +10,10 @@ Abstract: <%= @talk.abstract %>
 You can find out more at:
 <%= @talk_url %>
 
-Or, if you have a talks.cam account, you can add this talk to your list:
+Or, if you have a <%=SITE_NAME%> account, you can add this talk to your list:
 <%= @add_to_list_url %>
 
-If you don't have a talks.cam account, you can get one here:
+If you don't have a <%=SITE_NAME%> account, you can get one here:
 <%= new_user_url %>
 
 If the technology works, clicking on the link below might download the details of the talk in a format that your calendar program understands:
