--- a/app/views/mailer/weekly_list.text.erb
+++ b/app/views/mailer/weekly_list.text.erb
@@ -1,6 +1,6 @@
 <%= @text %>
 
 **********
-To unsubscribe, please use this link: http://<%= @host %>/reminder (You will need to log into your talks.cam account).
+To unsubscribe, please use this link: http://<%= @host %>/reminder (You will need to log into your <%=SITE_NAME %> account).
 
 If you have any questions please contact <%= WEBMASTER %>
