Removed mentions to talks.cam.

--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,6 +1,6 @@
 <h1 id="statistics">Statistics</h1>
 
-<p>The following statistics were created from the talks.cam database on <%= Time.now %>.</p>
+<p>The following statistics were created from the <%=SITE_NAME %> database on <%= Time.now %>.</p>
 
 <h2>Users</h2>
 <table border="0" cellspacing="5" cellpadding="5">
