--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -2,7 +2,7 @@
 
 <% if @show_message %>
 <p id='ask_for_more_information' class='message'>
-Before you continue on to use talks.cam, we would be grateful if you could fill out these details:
+Before you continue on to use <%=SITE_NAME %>, we would be grateful if you could fill out these details:
 </p>
 <% end %>
 
