--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -16,7 +16,7 @@ Click <%= link_to 'here', login_url(:action => :return_to_original_url )%> to re
 <table>
 <tr><td>Name:</td><td><%= @user.name %></td></tr>
 <tr><td>Affiliation:</td><td><%= @user.affiliation %></td></tr>
-<tr><td>E-mail:</td><td><%= User.current ? mail_to(@user.email) : "" %> (only provided to users who are <%= link_to 'logged into talks.cam', login_url(:return_url => request.url) %>)</td></tr>
+<tr><td>E-mail:</td><td><%= User.current ? mail_to(@user.email) : "" %> (only provided to users who are <%= link_to "logged into #{SITE_NAME}", login_url(:return_url => request.url) %>)</td></tr>
 <tr><td>Last login:</td><td><%= @user.last_login %></td></tr>
 </table>
 
@@ -33,7 +33,7 @@ Click <%= link_to 'here', login_url(:action => :return_to_original_url )%> to re
 
 <h2>Talks given by <%= @user.name %></h2>
 
-<p>Obviously this only lists talks that are listed through talks.cam. Furthermore, this facility only works if the speaker's e-mail was specified in a talk. Most talks have not done this.</p>
+<p>Obviously this only lists talks that are listed through <%=SITE_NAME%>. Furthermore, this facility only works if the speaker's e-mail was specified in a talk. Most talks have not done this.</p>
 
 <ul>
 <% for talk in @user.talks %>
@@ -43,7 +43,7 @@ Click <%= link_to 'here', login_url(:action => :return_to_original_url )%> to re
 
 <h2>Talks organised by <%= @user.name %></h2>
 
-<p>This list is based on what was entered into the 'organiser' field in a talk. It may not mean that <%= @user.name %> actually organised the talk, they may have been responsible only for entering the talk into the talks.cam system.</p>
+<p>This list is based on what was entered into the 'organiser' field in a talk. It may not mean that <%= @user.name %> actually organised the talk, they may have been responsible only for entering the talk into the <%=SITE_NAME%> system.</p>
 
 <ul>
 <% for talk in @user.talks_organised %>
