--- a/app/views/posted_talks/edit.html.erb
+++ b/app/views/posted_talks/edit.html.erb
@@ -41,7 +41,7 @@
 </td>
 <tr>	
 </table>
-<div id="smartform">
+<div id="smartform" class="lean_modal">
 Please copy &amp; paste the seminar announcement text (e.g., from an email) into the box below. We will automatically recognize the information and fill out the form for you.
 <form>
 <textarea id="inputbox" cols="63" rows="20"></textarea>
