--- a/app/views/talk/index.html.erb
+++ b/app/views/talk/index.html.erb
@@ -2,6 +2,15 @@
 	<%= logo(@talk, :medium) %>
 	<h1 class='summary'><%= @talk.title %></h1>
 	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %>		
+	<p>
+	  <%= add_talk_to_list_button.html_safe %>
+	  <%= vcal_button.html_safe %>
+	  <%= text_button.html_safe %>
+	  <% if User.current %>
+	  <%= tell_a_friend_button.html_safe %>
+	  <% end %>
+	  <%= contact_organizer_button.html_safe %>
+	</p>
 	<ul class='details'>
 		<li><%= image_tag 'clock.jpg' %><%= format_time_of_talk @talk, true %></li>
 		<li><%= image_tag 'house.jpg' %><%= link_list @talk.venue %>.</li>
