--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,8 +8,8 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require talks-screen
+ *= require bootstrap.min
+ *= require bootstrap-responsive.min
  *= require calendar-blue
  *= require talk-help
- *= require bootstrap-icons
  */
