Fixed front and with_related layouts.

--- a/app/views/layouts/with_related.html.erb
+++ b/app/views/layouts/with_related.html.erb
@@ -1,27 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <%= render 'shared/header' %>
-	<body class='<%= body_class %>'>
-		<%= render 'shared/navigationbar' %>
-		<%= render 'shared/headerlogos' %>
-		<%= render 'shared/breadcrumbs' %>
-
-		<table id="container" summary="page content">
-			<tr>
-				<td class="left">
-					<%= render :partial => 'shared/sidebox' %>
-				</td>
-				<td class="main">
-					<a name="startcontent" id="startcontent"></a>
-					<%= yield %>
-				</td>
-				<td class='related'>
-					<%= render :partial => 'related' %>
-				</td>
-			</tr>
-		</table>
-		<%= render 'shared/footer'%>
-	</body>
+<body>
+  <%= render 'shared/navigationbar' %>
+  <div class="container">
+    <%= render 'shared/breadcrumbs' %>
+    <div class="row">
+      <div class="span3"><%= render :partial => 'shared/sidebox' %></div>
+      <div class="span6"><a name="startcontent" id="startcontent"></a><%= yield %></div>
+      <div class="span3"><%= render :partial => 'related' %></div>
+    </div>
+  </div>
+  <%= render 'shared/footer'%>
+</body>
 </html>
 
