--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -1,6 +1,8 @@
 <!-- breadcrumbs -->
-
-<div id="bread">
-<p><!--<a href="http://www.cam.ac.uk/">University of Cambridge</a>&nbsp;&gt;&nbsp;--><%= link_to SITE_NAME, home_url %><%= mybreadcrumbs %></p>
+<div class="row">
+<ul class="breadcrumb">
+  <li><%= link_to SITE_NAME, home_url %></li>
+  <%= mybreadcrumbs %>
+</ul>
 </div>
 <!-- end breadcrumbs -->
