--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -4,20 +4,11 @@
 <body>
 <%= render 'shared/navigationbar' %>
 
-<div id="content"><a name="startcontent" id="startcontent"></a><!-- this is the anchor for the skiplink -->
-
-<table class='front' summary="page content">
-	<tr>
-		<td class="left">
-			<%= render :partial => 'leftbar' %>
-		</td>
-		<td rowspan='2' class="main">
-			<%= yield %>
-		</td>
-	</tr>
-</table>
-
-
+<div class="container">
+<div class="row">
+  <div class="span4"><%= render :partial => 'leftbar' %></div>
+  <div class="span8"><%= yield %></div>
+</div>
 </div>
 <!-- end contents -->
 <%= render 'shared/footer'%>
