--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -1,5 +1,5 @@
 <!-- header -->
-<div class="navbar navbar-fixed-top">
+<div class="navbar">
   <div class="navbar-inner">
     <div class="container-fluid">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -13,7 +13,7 @@
           Logged in as <a href="#" class="navbar-link">Username</a>
         </p>
         <ul class="nav">
-          <li><%= link_to "Today's talks", date_index_path %></li>
+          <li><%= link_to "About", document_path(:name => 'About') %></li>
           <li><%= link_to "Contact", document_path(:name=>'Contact') %></li>
         </ul>
 	<%= form_tag( { :controller => 'search', :action => 'results' }, {:id => 'smallsearch', :class => "navbar-search pull-left"} ) %>
