--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <%= render 'shared/header' %>
-	<body class='<%= body_class %>'>
-		<%= render 'shared/navigationbar' %>
-		<%= render 'shared/headerlogos' %>
-		<%= render 'shared/breadcrumbs' %>
-
-		<table id="container" summary="page content">
-			<tr>
-				<td class="left">
-					<%= render :partial => 'shared/sidebox' %>
-				</td>
-				<td class="centre">
-					<a name="startcontent" id="startcontent"></a>
-					<%= yield %>
-				</td>
-			</tr>
-		</table>
-		<%= render 'shared/footer'%>
-	</body>
+<body>
+  <%= render 'shared/navigationbar' %>
+  <div class="container">
+    <%= render 'shared/breadcrumbs' %>
+    <div class="row">
+      <div class="span4"><%= render :partial => 'shared/sidebox' %></div>
+      <div class="span8"><%= yield %></div>
+    </div>
+  </div>
+  <%= render 'shared/footer'%>
+</body>
 </html>
