--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -2,24 +2,42 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container-fluid">
+      <%= link_to SITE_NAME, home_path, :class => "brand" %>
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to SITE_NAME, home_path, :class => "brand" %></a>
+      <ul class="nav pull-right">
+	<% if User.current %>
+	<li class="dropdown">
+	  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+	    <%= User.current.name %>
+	    <span class="caret"></span>
+	  </a>
+	  <ul class="dropdown-menu">
+	    <li><%= link_to 'Edit your details', user_url(:id => User.current.id, :action => 'edit') %></li>
+	    <li><%= link_to 'Change your password', user_url(:id => User.current.id, :action => 'change_password') %></li>
+	    <li><%= link_to 'Manage e-mail reminders', reminder_url %></li>
+	    <li class="divider"></li>
+	    <li><%= link_to 'Log out', login_url(:action => 'logout') %></li>
+	  </ul>
+	</li>
+	<% else %>
+	<li><%= link_to 'Sign in', login_url %></li>
+	<% end %>
+      </ul>
       <div class="nav-collapse collapse">
-        <p class="navbar-text pull-right">
-          Logged in as <a href="#" class="navbar-link">Username</a>
-        </p>
         <ul class="nav">
           <li><%= link_to "About", document_path(:name => 'About') %></li>
           <li><%= link_to "Contact", document_path(:name=>'Contact') %></li>
-        </ul>
-	<%= form_tag( { :controller => 'search', :action => 'results' }, {:id => 'smallsearch', :class => "navbar-search pull-left"} ) %>
-	<%= text_field_tag 'search', '', :class => "search-query", :placeholder => "Search" %>
-	</form>
+	  <%= form_tag( { :controller => 'search', :action => 'results' }, {:id => 'smallsearch', :class => "navbar-search pull-left"} )  do %>
+	    <%= text_field_tag 'search', '', :class => "search-query", :placeholder => "Search" %>
+	    <% end %>
+       </ul>
+	
       </div><!--/.nav-collapse -->
+      
     </div>
   </div>
 </div>
