--- a/app/views/talk/index.html.erb
+++ b/app/views/talk/index.html.erb
@@ -1,16 +1,24 @@
-<div class='vevent'>
+<div class='talk effect2'>
 	<%= logo(@talk, :medium) %>
 	<h1 class='summary'><%= @talk.title %></h1>
 	<%= link_to_if @talk.speaker, @talk.name_of_speaker, { :controller => "user", :action => "show", :id => @talk.speaker  } %>		
-	<p>
-	  <%= add_talk_to_list_button.html_safe %>
-	  <%= vcal_button.html_safe %>
-	  <%= text_button.html_safe %>
-	  <% if User.current %>
-	  <%= tell_a_friend_button.html_safe %>
+	<div class="btn-toolbar">
+	  <div class="btn-group">
+	    <%= add_talk_to_list_button.html_safe %>
+	    <%= vcal_button.html_safe %>
+	    <%= text_button.html_safe %>
+	    <% if User.current %>
+	    <%= tell_a_friend_button.html_safe %>
+	    <% end %>
+	    <%= contact_organizer_button.html_safe %>
+	  </div>
+	  <% if @talk.editable? %>
+	  <div class="btn-group">
+	    <%= link_to 'Edit this talk', {:controller => "talk", :action => "edit", :id => @talk}, :class => 'btn' %>
+	    <%= link_to 'Delete this talk', {:controller => 'talk', :action => 'delete', :id => @talk}, :class => 'btn' %>
+	  </div>
 	  <% end %>
-	  <%= contact_organizer_button.html_safe %>
-	</p>
+	</div>
 	<ul class='details'>
 		<li><%= image_tag 'clock.jpg' %><%= format_time_of_talk @talk, true %></li>
 		<li><%= image_tag 'house.jpg' %><%= link_list @talk.venue %>.</li>
