--- a/app/views/layouts/with_related.html.erb
+++ b/app/views/layouts/with_related.html.erb
@@ -5,6 +5,7 @@
   <%= render 'shared/navigationbar' %>
   <div class="container">
     <%= render 'shared/breadcrumbs' %>
+    <%= show_flash %>
     <div class="row">
       <div class="span3"><%= render :partial => 'shared/sidebox' %></div>
       <div class="span6"><a name="startcontent" id="startcontent"></a><%= yield %></div>
