Design fix around application layout.

--- a/app/views/home/_all.html.erb
+++ b/app/views/home/_all.html.erb
@@ -1,8 +1,8 @@
+<% last_date = nil %>
 <% @talks.each do |talk| %>
-<div class="row">
-  <div class="span2 date"><h2><%= format_date(talk.start_time) %></h2></div>
-  <div class="span6">
-    <%= render :partial => 'show/simple_talk', :object => talk %>
-  </div>
-</div>
+<% unless last_date && talk.start_time.at_beginning_of_day == last_date %>
+<h2><%= format_date(talk.start_time) %></h2>
+<% last_date = talk.start_time.at_beginning_of_day %>
+<% end %>
+<%= render :partial => 'show/simple_talk', :object => talk %>
 <% end %>
