--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,12 @@
     <%= render 'shared/breadcrumbs' %>
     <%= show_flash %>
     <div class="row">
-      <div class="span3"><%= render :partial => 'shared/sidebox' %></div>
-      <div class="span9">
+      <div class="span2"><%= render :partial => 'shared/sidebox' %></div>
+      <div class="span7">
 	<%= yield %>
+      </div>
+      <div class="span3">
+	<%= render :partial => 'related' %>
       </div>
     </div>
   </div>
