--- a/app/assets/stylesheets/talks-screen.css
+++ b/app/assets/stylesheets/talks-screen.css
@@ -345,7 +345,7 @@ body.application table#container {
 		div.simpletalk {
 		    background-color: #ffffb9;
 		    /* padding: 0.5em 0 0.5em 0; */
-		    padding: 0.5em 2em;
+		    padding: 14px 40px;
 		    margin-bottom: 1em;
 		}
 						
