Design fixed home is rendered with with_related.

--- a/app/views/shared/_navigationbar.html.erb
+++ b/app/views/shared/_navigationbar.html.erb
@@ -39,6 +39,7 @@
 	  </ul>
 	</li>
 	<% else %>
+	<li><%= link_to 'Create an account', user_path(:action => 'new') %>
 	<li><%= link_to 'Sign in', login_path %></li>
 	<% end %>
       </ul>
