--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,13 @@
-<h2><%= link_to 'Your picks', list_path(:id => User.current.personal_list) %></h2>
+<h2>Your picks</h2>
 <div class='vevent simpletalk click effect2'>
   <%= link_to 'Add a new talk', list_details_path(:action => 'choose'), :class => "btn btn-large btn-block" %>
 </div>
 <ul class="nav nav-tabs" id="myTab">
   <li class="active"><a href="#" id="day">Today</a></li>
   <li><a href="#" id="week">This week</a></li>
+  <% if User.current %>
   <li><a href="#" id="stared">Stared</a></li>
+  <% end %>
   <li><a href="#" id="all">All</a></li>
 </ul>
 <div id="tab-target">
