--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,6 @@
 <head>
 <title><%= page_title %></title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <%= javascripts %>
 <%= csrf_meta_tag %>
 <%= stylesheets %>
