Fixed design in home. _simple_talk can take a parameter max_abstract.

--- a/app/views/home/_related.html.erb
+++ b/app/views/home/_related.html.erb
@@ -1,2 +1,2 @@
 <h2>Featured talks</h2>
-<%= render :partial => 'show/simple_talk', :collection => @featured_talks %>
+<%= render :partial => 'show/simple_talk', :collection => @featured_talks, :locals => {:max_abstract => 100} %>
