--- a/app/views/show/_day.html.erb
+++ b/app/views/show/_day.html.erb
@@ -1,4 +1,8 @@
+<div class='day'>
 <h3><%= format_date(@start_time) %></h3>
+<table>
 <% @talks.each do |talk| %>
-	<li><%= talk.start_time.strftime('%H:%M') %> - <%= link_talk talk %></li>
+<%= render :partial => 'tr_day', :locals => {:talk => talk} %>
 <% end %>
+</table>
+</div>
