--- a/app/assets/stylesheets/talks-screen.css
+++ b/app/assets/stylesheets/talks-screen.css
@@ -554,6 +554,8 @@ div.oneday a { text-decoration:none; color: #000;}
 div.oneday a:visited { text-decoration:none; color: #000;}
 div.oneday a:hover 	{ text-decoration:underline; color: #003399;}
 
+div.day td.date { width: 5em; }
+
 .fieldWithErrors {
   padding: 2px;
   background-color: red;
