Only apply ABST_TRUNCATION_FACTOR when it is not nil.

--- a/app/views/show/_simple_talk.html.erb
+++ b/app/views/show/_simple_talk.html.erb
@@ -1,6 +1,6 @@
 <% unless defined? max_abstract %>
 <% max_abstract = 400 %>
-<% if simple_talk.language %>
+<% if simple_talk.language && ABST_TRUNCATION_FACTOR[simple_talk.language] %>
 <% max_abstract *= ABST_TRUNCATION_FACTOR[simple_talk.language] %>
 <% end %>
 <% end %>
