--- a/app/views/posted_talks/edit.html.erb
+++ b/app/views/posted_talks/edit.html.erb
@@ -16,7 +16,7 @@
 	<%= f.text_field :speaker_email, :size => '60', :class => 'wide'  %>
 
 	<h3>Date YYYY/MM/DD and Time HH:MM</h3>
-	<%= f.text_field :date_string, {:size => '11'} %>  from <%= f.text_field :start_time_string, :size => '5' %> to <%= f.text_field :end_time_string, :size => '5' %> 
+	<%= f.text_field :date_string, :class => 'date' %>  from <%= f.text_field :start_time_string, :class => 'date' %> to <%= f.text_field :end_time_string, :class => 'date' %> 
 
 	<h3>Venue</h3>
 	<%= f.text_field :venue_name, {:size => 60, :class => 'wide' } %>
